elaborate comments in index.js and make small improvements

--- a/assets/tacos.html
+++ b/assets/tacos.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="favicon.ico" />
   <link rel="stylesheet" href="assets/style.css">
-  <title>🌮</title>
+  <title> 🌮🗣 </title>
 </head>
 <body>
   <h1>Popular Tacos</h1>
@@ -17,6 +17,5 @@
     <li> 🌮 Lenguas </li>
   </ul>
   <a href="/">Main Page</a>
-
 </body>
 </html>
